fixed overflowing buttons on small screen

--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -2,6 +2,7 @@
 	position: relative;
 	left: calc(9% + 45px);
 	top: 48%;
+	width: 40vw;
 
 	a {
 		text-decoration: none;
