--- a/styles/style.css
+++ b/styles/style.css
@@ -889,6 +889,7 @@
   position: relative;
   left: calc(9% + 45px);
   top: 48%;
+  width: 40vw;
 }
 
 .btn-1-1 a {
